--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,13 +13,22 @@
   font-size: 1rem;
   font-weight: normal;
   background-color: var(--gray-500);
-  border: none;
+  border: 1px solid transparent;
   border-radius: 8px;
   color: var(--gray-100);
 }
 
 .inputTask::placeholder {
   color: var(--gray-300);
+}
+
+.inputTask:not(:placeholder-shown) {
+  border: 1px solid var(--purpleDark);
+}
+
+.inputTask:focus {
+  outline: none;
+  border: 1px solid var(--purpleDark);
 }
 
 .formContainer {
