--- a/src/App.module.css
+++ b/src/App.module.css
@@ -39,3 +39,21 @@
   gap: 0.5rem;
   height: 3.375rem;
 }
+
+.ListTasksContainer {
+  width: 46rem;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.listTasks {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
