--- a/src/Components/TaskItem/styles.module.css
+++ b/src/Components/TaskItem/styles.module.css
@@ -1,7 +1,7 @@
 .TaskItemContainer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 0.75rem;
   background-color: var(--gray-400);
   height: 4.5rem;
