--- a/src/App.module.css
+++ b/src/App.module.css
@@ -38,6 +38,12 @@
   justify-content: center;
   gap: 0.5rem;
   height: 3.375rem;
+
+  @media (max-width: 767px) {
+    flex-direction: column;
+    gap: 1rem;
+    height: fit-content;
+  }
 }
 
 .ListTasksContainer {
@@ -48,6 +54,10 @@
   justify-content: center;
   flex-direction: column;
   gap: 1.5rem;
+
+  @media (max-width: 767px) {
+    width: 100%;
+  }
 }
 
 .listTasks {
@@ -56,4 +66,10 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+}
+
+main {
+  @media (max-width: 767px) {
+    padding: 0 16px;
+  }
 }
